# ecom-product-assistant

./: .dockerignore  .gitignore  pyproject.toml  requirements.txt
data/: product_reviews.csv
prod_assistant/config/: config.yaml
prod_assistant/etl/: data_ingestion.py  data_scrapper.py
prod_assistant/logger/: __init__.py
prod_assistant/retriever/: retrieval.py
prod_assistant/router/: main.py
prod_assistant/workflow/: agentic_rag_workflow.py
