[project]
name = "ecom-product-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.packages.find]
include = ["prod_assistant"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
